syntax = "proto3";
package usermgmt;
option go_package="example.com/go-usermgmt-grpc;go_usermgmt_grpc";

//messages send between methods regarding tokens
message Token {
    string id = 1; 
    string name = 2;
    uint64 DomainLow = 3;
    uint64 DomainMid = 4;
    uint64 DomainHigh = 5;
    uint64 StatePartialValue = 6;
    uint64 StateFinalValue = 7;
    string Message = 8;
}
service TokenService {
    //method call for creating token
    rpc CreateToken (Token) returns (Token);
    //method call for writing token
    rpc WriteToken (Token) returns (Token);
    //method call for reading token
    rpc ReadToken (Token) returns (Token);
    //method call for droping token
    rpc DropToken (Token) returns (Token);
    //method call for printing tokens
    rpc GetAllTokens (Token) returns (stream Token);
}